--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,4 @@
 assets/baseline_nn_model. filter=lfs diff=lfs merge=lfs -text
+assets/baseline_nn_model.h5 filter=lfs diff=lfs merge=lfs -text
+assets/baseline_nn_model.keras filter=lfs diff=lfs merge=lfs -text
+assets/tfidf_logreg_baseline.joblib filter=lfs diff=lfs merge=lfs -text
